style.css
/* ... */
.animateOpacity {
    transition: opacity 2s ease 1s;
}
/** Wordpress image wrapping kludge */
a > img.alignCenter, a > img.aligncenter {
    display: block;
}
/** Page headings */
.mainTitle {
    width: 98%;
    margin-left: 1%;
    background-color: white;
    text-align: center;
    padding: 10px;
    margin-top: 2px;
    font-size: 2rem;
    border-radius: 8px;
    margin-bottom: 10px;
}
.entry-content h1 {
    font-size: 2rem;
}
.entry-content h2, .title {
    font-size: 1.7rem;
}
.entry-content h3 {
    font-size: 1.5rem;
}
.entry-content h4 {
    font-size: 1.3rem;
}
.entry-content h5,.entry-content h6 {
    font-size: 1.2rem;
}
.entry-content h3,.entry-content h4,.entry-content h5,.entry-content h6 {
    margin-left: 4% !important;
}
.pageHeaderSection {
    background: rgba(255, 255, 255, 0.47);
    margin-top: 20px;
    width: 96%;
    margin-left: 2%;
    border-radius: 20px;
    padding: 20px;
    border-style: dashed;
    border-width: 1px;
    margin-bottom: 20px;
}
.pageHeaderSection .pageTitle {
    font-size: 3rem;
}
.pageHeaderSection .pageDescription {
    font-size: 1.5rem;
    margin-left: 8%;
    margin-top: 8px;
    border-top: 1px dashed black;
    margin-right: -1.3rem;
    border-top-right-radius: 18px;
    border-top-left-radius: 13px;
    padding-left: 16px;
    padding-top: 3px;
}
/* Auto-center post images, but Don't apply fix for those images with a class */
.entry-content p > img:not([class*=""]) {
    margin: auto;
    display: block;
}

/** Nav stuff */
#wpadminbar {
    position: fixed !important;
}

/**
* === Site Search ===
*/
.siteSearchWrapper {
    padding: 4px 20px;
    max-width: 250px;
    text-align: center;
    margin: auto;
}
.siteSearchInput {
    color: white;
    padding-left: 15px !important;
}
#nav-search-wrapper {
    overflow: hidden;
}
div.nav-collapse.collapse {
    float:left;
}

#mainmenu {
    text-align:center;
}

/**
* Homepage - New "Portfolio" theme
*/

.portfolioSection {
    padding: 0px 4px;
}
.portfolioHomepage .portfolioSection > h2 {
    margin: 0px;
    padding-top: 10px;
}
.portfolioHomepage .portfolioSection.altLight {
    background-color: #3b506b;
    color: white;
}
.portfolioHomepage .portfolioSection.altDark {
    background-color: #2E3641;
    color: white;
}
#primary {
    padding-left: 6px;
    padding-right: 6px
}
#main, .container.main, .main, body > .everypageTopWidgetArea {
    padding-top: 100px; /* necessary to avoid appearing behind sticky nav */
}

/* Default Font */
p,body,h1,h2,h3,h4,h5,h6 {
    font-family: 'Lato',sans-serif;
}
p, ul, ol, .entry-content a {
    /** 18px default */
    font-size: 1.125rem;
}
h1,h2,h3,h4,h5,h6 {
    font-weight: bold !important;
}
h1,h2 {
    text-align:center;
}
/* Main body content styling */
.entry-content{
    background-color: #FFF;
    margin: 0px 10px;
    padding: 10px;
    border-radius: 5px;
}
.entry-content > p {
    /* Turned off first-line indent. Uncomment below to turn back on */
    /* text-indent: 1.25rem; */
}

/* Lists */
.entry-content li {
    margin-top: 1rem;
    /** Another responsive fix: prevent ul > lis from overflowing / clipping 100vw width */
    word-wrap: break-word;
}
/*
* Code blocks 
*/
.entry-content pre {
    background-color: rgba(222, 222, 222, 0.45);
    color: black;
    padding: 2px 0px 2px 10px;
}

/** <code>, but not inside pre, not prism (usually inline in <p> tags, along regular text)*/
:not(pre) > code:not([class*="language-"]) {
    padding: 0px 2px 0px 2px;
    margin: 0px 1px 0px 1px;
    border-radius: 6px;
    font-weight: bold;
    color: #2d512d;
    border: 1px solid rgba(0, 0, 0, 0.1);
}

/**
* Prism - Missing Language Fallback
*  - If the Prism language is present, the class (on pre wrapper) should look like "{name} language-{name}",
* but, if it is missing, it will just be "{name}". E.g "sh language-sh" vs just "sh"
*  - We can use this to capture blocks with missing language syntax highlighters,
* and apply default fallback formatting
*  - Alternatively, we could style each language manually by targeting the language name
*/
/** <code>, inside pre, but missing Prism lang highlighting */
pre[class][id^="jCode"]:not([class*="language-"]) {
    background-color: #272822;
    color: white;
    padding: 1em;
    margin: .5em 0;
    overflow: auto;
    border-radius: 0.3em;
}

/* Emulate z-depth-3 on all code blocks */
article pre {
    -webkit-box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
    box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
}
/* Wrapping (word-break) code blocks */
pre.wrap, pre.wrap > code, pre.noScroll, pre.noScroll > code {
    word-break: break-word;
    overflow-x: visible;
    white-space: pre-wrap;
}
/* Fix for content overflowing the body */
.entry-content code, .entry-content pre {
    overflow-wrap: break-word;
}
.entry-content p > iframe {
    max-width: 100%;
}
/* Don't overflow images */
.entry-content p > img  {
    max-width: 100%;
}

.entry-content pre {
    max-width: 100%;
    overflow-x: auto;
}
.entry-content a > img[class*="wp-image-"] {
    max-width: 100%;
    height: auto;
}

#maingallery {
    width:100%;
    text-align:center;
    padding-top: 40px;
}

div.Promo_Image_Wrapper img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 900px;
    width: 95%;
}
div.Promo_Image_Wrapper > a {
    display: inline-block;
}

.hero_image_wrapper {
    width: 100%;
    text-align: center;
}
.hero_image_wrapper > img {
    width: 100%;
    height: auto;
}
div#main_post_wrapper > p {
    padding-left: 20px;
    padding-right: 10px;
}
/* ... */

